- Fixed bug #49503 (invalid warning for failed semaphore file creation) # I have no idea why I had added this. Might have been some debug code.. :(